src/Components/Home.css
@media screen and (min-width: 768px) {
    .ssrp-absolute {
        top: 20vh;

        position: absolute;
    }
}

@font-face {
  font-family: 'nulshock bd'; /* Replace with your font's name */
  src: url('./fonts/nulshock bd.ttf') format('truetype'); /* Replace with the actual path to your .ttf file */
}
@font-face {
  font-family: 'dahlia-regular'; /* Replace with your font's name */
  src: url('./fonts/dahlia-regular.otf') format('truetype'); /* Replace with the actual path to your .ttf file */
}
.typeit-text {
    font-size: 1.2rem; /* Adjust size as needed */
    text-align: left;
    font-family: 'Nulshock bd' !important;
    src: url('./fonts/dahlia-font/dahlia-bold.woff') format('woff');
    font-weight: normal;
    font-style: normal;
    /* animation: fade-up 5s; */
  }


  .main1{
    animation: fade-up 8s;


  }
  


@keyframes fade-up{
  0%{
    opacity: 0;
    transform: translate(30px) scale(0.9);
  }

  100%{
    opacity: 1;
    transform: translateY(0px) scale(1);
  }
}

@media screen and (max-width: 768px) {
  .typeit-text {
    font-size: 3vw; /* Adjust size as needed */
  }

  .astro-block{
    height: 40vh  !important;
    width: 100vw  !important;
  }
  
}












  .typeit-text:nth-child(1) {
    font-family: 'dahlia-regular';
    src: url('./fonts/dahlia-font/dahlia-bold.woff') format('woff');
    font-weight: normal;
    font-style: normal;
    font-size: 6vw;
    font-weight: 500;
    
  }

  .Slogan ,.ssrp{
    font-family: 'dahlia-regular';
    font-size: 3vw;
    font-weight: 500;
    color: #fff;
    text-align: left;

}
  @media screen and (max-width: 768px) {
    .typeit-text #small-type {
      font-size: 1vw; /* Adjust size as needed */
      text-align: left;
    }
    .Sloagan{
      font-size: 1vw;
    }
  }
@media screen and (min-width: 1100px) {
  .par{
    display: inline;
  }
  .astro-block{
    justify-content: end;
  }
  
}
a {
  color: #fff;
  text-transform: uppercase;
  text-decoration: none;
  letter-spacing: 0.15em;
  
  display: inline-block;
  padding: 15px 20px;
  position: relative;
}
a:after {    
  background: none repeat scroll 0 0 transparent;
  bottom: 0;
  content: "";
  display: block;
  height: 2px;
  left: 50%;
  background: #fff;
  transition: width 0.3s ease 0s, left 0.3s ease 0s;
  width: 0;
}
a:hover:after { 
  width: 100%; 
  left: 0; 
}
  .glow {
    border-radius: 50%;
    box-shadow: 
      0 0 10px #c3cec3, 
      0 0 20px #d6dcd6, 
      0 0 30px #888a88, 
      0 0 40px #444544, 
      0 0 50px #444544, 
      0 0 60px #444544, 
      0 0 70px #444544, 
      0 0 80px #444544, 
      0 0 90px #444544, 
      0 0 100px #444544;
  }

  @media screen and (max-width: 991px) {
    .earth-block{
      display: none;
    }

    
    
  }

  @media screen and (max-width: 768px) {
    .astro-block {
      width: 50vw;
      height: 30vh;
    }
  
    .earth-block {
      right: -40vw;
    }
  }

